@@ -11,6 +11,11 @@
 
 2009-02-12  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/chart/renderer/xy/GradientXYBarPainter.java
+    (paintBar): Use correct outline paint.
+
+2009-02-12  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/chart/annotations/XYPointerAnnotation.java
     (draw): Added support for rotated text, plus background paint and
     outline paint/stroke.
